--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+.container{
   text-align: center;
+  padding: 20px;
+ 
+}
+body{
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+ background-color: burlywood;
+ background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80');
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color:black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 45px 15px;
+  cursor: pointer;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn:hover {
+  background-color: #45a049; /* Darker green on hover */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.rst{
+  background-color: #f44336; /* Red */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
+  margin: 45px 15px;
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.rst:hover {
+  background-color: #d32f2f; /* Darker red on hover */
 }
