--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,24 @@
 .container{
   text-align: center;
   padding: 20px;
+  background-color:blanchedalmond;
+  background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80');
+  height: 100vh;
  
+}
+
+.container.dark{
+  background-color:#000000cf;
+  background-image: url('https://img.freepik.com/free-photo/3d-dark-grunge-display-background-with-smoky-atmosphere_1048-16218.jpg?semt=ais_items_boosted&w=740');
+  background-size: cover;
+  background-position: center;
+  color: white;
+  height: 100vh;
 }
 body{
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
- background-color: burlywood;
- background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80');
+  font-family: Arial, Helvetica, sans-serif
 }
-
 .btn{
   background-color: #4CAF50; /* Green */
   border: none;
@@ -23,11 +32,42 @@ body{
   cursor: pointer;
   border-radius: 20px;
 }
+.show-message{
 
+  font-size: 18px;
+  margin: 20px 10px;
+  color: #333;
+  padding: 10px;
+  border-radius: 15px; 
+  cursor: pointer;
+}
+
+.show-message:hover{
+  background-color: #d66a6a; /* Light gray on hover */
+  color: #000; /* Darker text on hover */
+}
 .btn:hover {
   background-color: #45a049; /* Darker green on hover */
 }
+.btn-theme{
+  background-color: rgb(0, 0, 0); 
+  width: 5cm;
 
+
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 20px;
+}
+.btn-theme:hover {
+  background-color: #352a2a; /* Darker blue on hover */
+}
 .rst{
   background-color: #f44336; /* Red */
   border: none;
