--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,18 @@ body{
 }
 .btn{
   background-color: #4CAF50; /* Green */
+ 
   border: none;
-  color:black;
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 45px 15px;
+  margin: 4px 10px;
   cursor: pointer;
   border-radius: 20px;
+
 }
 .show-message{
 
@@ -56,11 +58,12 @@ body{
 
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 15px;
+  width: 5cm;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 20px;
@@ -81,6 +84,7 @@ body{
   cursor: pointer;
   border-radius: 20px;
   margin: 45px 15px;
+  margin-top: 5px;
 
 
 }
